# daee-engine

./: .gitignore  CLAUDE.md  DINESH-READ-ME.md  README.md  llms.txt  observatory-monitor-2026-05-14.md
.claude/: settings.json
asean-trade-rules-mcp/: README.md  package-lock.json  package.json  wrangler.toml
benchmarks/: sample-report-2026-04.md
content/: 2026-04-19-data-is-the-moat.md  2026-04-21-why-static-mcp-scores-are-useless.md  2026-04-22-eu-ai-act-article-50-mcp-telemetry.md  2026-05-12-ctef-behavioral-attestation-for-mcp-agents.md  2026-05-14-mcp-server-operator-ctef-v032-t-5d-readiness.md  aps-dominion-observatory-trust-field.md  autogen-integration-rfc.md  hn-show-hn-dominion-observatory.md
decisions/: 2026-04-08-run-001.md  2026-04-08-run-002.md  2026-04-09-run-003.md  2026-04-10-intelligence.md  2026-04-10-run-003.md  2026-04-15-followup-observatory-html-landing.md  2026-04-15-run-004.md  2026-04-15-run-005.md  2026-04-16-run-007.md  2026-04-16-run-008.md  2026-04-16-run-009.md  2026-04-18-run-011-langchain-comment-35691.md  2026-04-18-run-011-langchain-comment-36232.md  2026-04-19-run-013-daily-report.md  2026-04-19-run-013-langchain-sweep.md  2026-04-19-run-013-lc-35691-rfc-slot-fill.md  2026-04-19-run-014-builder-d13-marker.md  2026-04-19-run-015-drift-correction-and-aps-scaffold.md  2026-04-19-run-015-p0-reminder.md  2026-04-20-run-016-d14-demand-crisis-dinesh-read-me.md  2026-04-22-run-018-daily-report.md  2026-04-23-run-019-daily-report.md  2026-04-25-run-021-CEO-OVERRIDE.md  2026-04-25-run-021-daily-report.md  2026-04-25-run-021-diagnosis.md  2026-04-25-run-021-redesign-brief-part1-assessment.md  2026-04-25-run-021-redesign-brief-part2-false-assumptions.md  2026-04-25-run-021-redesign-brief-part3-architectures.md  2026-04-25-run-021-redesign-brief-part4-recommendation.md  2026-04-26-run-022-daily-report.md  2026-04-26-run-022-novelty-hunt.md  2026-04-26-run-022-orphan-recovery.md  2026-04-27-run-022-AGT-rails-spec.md  2026-04-27-run-022-daily-report.md  2026-04-28-run-022-AGT-rails-spec.md  2026-04-28-run-022-EBTO-coexistence.md  (+38 more)
docs/: INTEGRATE.md  (+4 more)
dominion-observatory-langchain/: README.md  pyproject.toml
dominion-observatory-langchain/dominion_observatory_langchain/: __init__.py  callback.py  tools.py  trust_gate.py
dominion-observatory-langchain/examples/: auto_instrument.py
dominion-observatory-langchain/tests/: smoke_test.py
dominion-observatory-sdk/python/: README.md  pyproject.toml
dominion-observatory-sdk/python/dominion_observatory/: __init__.py  adk.py  langchain.py
(+110 files in other folders)
