[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dominion-observatory-langchain"
version = "0.1.0"
description = "LangChain / LangGraph integration for the Dominion Observatory — auto-report MCP tool calls and pre-flight trust-score gate any LangChain tool."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Dominion / vdineshk" }]
requires-python = ">=3.9"
keywords = [
  "langchain",
  "langgraph",
  "mcp",
  "model-context-protocol",
  "observability",
  "trust",
  "telemetry",
  "agents",
  "compliance",
  "eu-ai-act",
  "imda",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "dominion-observatory-sdk>=0.2.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.2.0"]

[project.urls]
Homepage = "https://dominion-observatory.sgdata.workers.dev"
Repository = "https://github.com/vdineshk/daee-engine"
Issues = "https://github.com/vdineshk/daee-engine/issues"

[tool.setuptools.packages.find]
include = ["dominion_observatory_langchain*"]
