[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dominion-observatory-sdk"
version = "0.2.0"
description = "Cross-ecosystem agent behavioral telemetry SDK — report and read trust scores from the Dominion Observatory. The only MCP scoring network that accepts agent-reported runtime data."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Dominion / vdineshk" }]
requires-python = ">=3.9"
keywords = [
  "mcp",
  "model-context-protocol",
  "observability",
  "trust",
  "telemetry",
  "agents",
  "langchain",
  "autogen",
  "crewai",
  "compliance",
  "eu-ai-act",
  "imda",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://dominion-observatory.sgdata.workers.dev"
Repository = "https://github.com/vdineshk/daee-engine"

[tool.setuptools.packages.find]
include = ["dominion_observatory*"]
